# bookshelf

./: .gitignore  .pnp.cjs  LICENSE  README.md  bookshelf.code-workspace  generate-icons.js  index.html  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.svelte  app.html  icons.css  main.ts  styles.css
src-assets/: app_logo.xcf
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/: messages.json
src-tauri/src/: books.rs  commands.rs  macros.rs  main.rs  pool.rs  settings.rs
src-tauri/src/books/: models.rs  store.rs
src-tauri/src/books/scripts/: dummy_data.sql  init.sql
src/api/: books.ts  index.ts  settings.ts  utils.ts
src/components/: Icon.svelte  Main.svelte  MenuItem.svelte  SideMenu.svelte
src/components/layout/: SplitLayout.svelte
src/components/layouts/: SideMenu.svelte  SplitLayout.svelte
src/contexts/: app.ts  context-utils.ts
src/lang/: i18n.ts
src/lib/: Greet.svelte  Page.svelte
src/models/: books.ts  icons.ts  menu.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/about/: +page.svelte
src/routes/settings/: +page.svelte
