[package]
name = "bookshelf"
version = "0.0.0"
description = "A simple application to keep track of owned books"
authors = ["Sandro Dallo <sandro@dallo.biz"]
license = "BSD-3"
repository = "https://github.com/snmed/bookshelf"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.26", features = ["serde"] }
rusqlite = { version = "0.29.0", features = ["chrono", "bundled"] }
rusqlite_migration = { version = "1.0.2" }
directories = "5.0.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
